# rust_onnx_inference

./: Cargo.toml
src/: camera.rs  image_processing.rs  inference.rs  main.rs
